@@ -1,4 +1,4 @@
-# Copyright (C) 2008-2013 Zentyal S.L.
+# Copyright (C) 2008-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -445,23 +445,6 @@ sub menu
         'text' => __('Security Updates'),
        ));
     $root->add($folder);
-
-    if ($self->disasterRecoveryAvailable()) {
-        my $system = new EBox::Menu::Folder(
-            'name' => 'SysInfo',
-            'text' => __('System'),
-            'order' => 30
-        );
-
-        $system->add(new EBox::Menu::Item(
-            'url' => 'SysInfo/DisasterRecovery',
-            'separator' => 'Core',
-            'order' => 45,
-            'text' => __('Disaster Recovery')
-        ));
-
-        $root->add($system);
-    }
 }
 
 # Method: widgets
